--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -21,13 +21,26 @@
        <widget class="QCalendarWidget" name="calendarWidget">
         <property name="maximumSize">
          <size>
-          <width>300</width>
-          <height>16777215</height>
+          <width>400</width>
+          <height>250</height>
          </size>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="1" rowspan="2">
        <widget class="QTextEdit" name="txtDiary"/>
       </item>
      </layout>
@@ -78,6 +91,9 @@
    </property>
   </action>
   <action name="action_Add">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>&amp;Add</string>
    </property>
