--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -60,6 +60,7 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionSave"/>
     <addaction name="actionE_xit"/>
    </widget>
    <widget class="QMenu" name="menuEvent_s">
@@ -68,8 +69,22 @@
     </property>
     <addaction name="action_Add"/>
    </widget>
+   <widget class="QMenu" name="menu_Edit">
+    <property name="title">
+     <string>&amp;Edit</string>
+    </property>
+    <addaction name="actionInsert_numbered_list"/>
+    <addaction name="actionInsert_bulleted_list"/>
+    <addaction name="actionCut"/>
+    <addaction name="actionCopy"/>
+    <addaction name="actionPaste"/>
+    <addaction name="actionBold"/>
+    <addaction name="actionItalic"/>
+    <addaction name="actionUnderline"/>
+   </widget>
    <addaction name="menu_File"/>
    <addaction name="menuEvent_s"/>
+   <addaction name="menu_Edit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -84,8 +99,23 @@
    </attribute>
    <addaction name="actionE_xit"/>
    <addaction name="action_Add"/>
+   <addaction name="actionSave"/>
+   <addaction name="separator"/>
+   <addaction name="actionInsert_numbered_list"/>
+   <addaction name="actionInsert_bulleted_list"/>
+   <addaction name="separator"/>
+   <addaction name="actionCut"/>
+   <addaction name="actionCopy"/>
+   <addaction name="actionPaste"/>
+   <addaction name="actionBold"/>
+   <addaction name="actionItalic"/>
+   <addaction name="actionUnderline"/>
   </widget>
   <action name="actionE_xit">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/poweroff.png</normaloff>:/tlb/poweroff.png</iconset>
+   </property>
    <property name="text">
     <string>E&amp;xit</string>
    </property>
@@ -94,12 +124,99 @@
    <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/edit.png</normaloff>:/tlb/edit.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Add</string>
    </property>
   </action>
+  <action name="actionInsert_numbered_list">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/list.png</normaloff>:/tlb/list.png</iconset>
+   </property>
+   <property name="text">
+    <string>Insert numbered list</string>
+   </property>
+  </action>
+  <action name="actionInsert_bulleted_list">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/bullet.png</normaloff>:/tlb/bullet.png</iconset>
+   </property>
+   <property name="text">
+    <string>Insert bulleted list</string>
+   </property>
+  </action>
+  <action name="actionBold">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/bold.png</normaloff>:/tlb/bold.png</iconset>
+   </property>
+   <property name="text">
+    <string>Bold</string>
+   </property>
+  </action>
+  <action name="actionItalic">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/italic.png</normaloff>:/tlb/italic.png</iconset>
+   </property>
+   <property name="text">
+    <string>Italic</string>
+   </property>
+  </action>
+  <action name="actionUnderline">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/underlined-text.png</normaloff>:/tlb/underlined-text.png</iconset>
+   </property>
+   <property name="text">
+    <string>Underline</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/diskette.png</normaloff>:/tlb/diskette.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionCut">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/cut.png</normaloff>:/tlb/cut.png</iconset>
+   </property>
+   <property name="text">
+    <string>Cut</string>
+   </property>
+  </action>
+  <action name="actionCopy">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/copytext.png</normaloff>:/tlb/copytext.png</iconset>
+   </property>
+   <property name="text">
+    <string>Copy</string>
+   </property>
+  </action>
+  <action name="actionPaste">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/paste.png</normaloff>:/tlb/paste.png</iconset>
+   </property>
+   <property name="text">
+    <string>Paste</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionE_xit</sender>
