--- a/ui/icons.qrc
+++ b/ui/icons.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="tlb">
+    <file>printer.png</file>
+    <file>calendar.png</file>
+    <file>time.png</file>
     <file>bold.png</file>
     <file>underlined-text.png</file>
     <file>italic.png</file>
