--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -61,6 +61,7 @@
      <string>&amp;File</string>
     </property>
     <addaction name="actionSave"/>
+    <addaction name="action_Print"/>
     <addaction name="actionE_xit"/>
    </widget>
    <widget class="QMenu" name="menuEvent_s">
@@ -74,8 +75,8 @@
     <property name="title">
      <string>&amp;Edit</string>
     </property>
-    <addaction name="actionInsert_numbered_list"/>
-    <addaction name="actionInsert_bulleted_list"/>
+    <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
     <addaction name="actionCut"/>
     <addaction name="actionCopy"/>
     <addaction name="actionPaste"/>
@@ -83,9 +84,18 @@
     <addaction name="actionItalic"/>
     <addaction name="actionUnderline"/>
    </widget>
+   <widget class="QMenu" name="menuInsert">
+    <property name="title">
+     <string>Insert</string>
+    </property>
+    <addaction name="actionDate"/>
+    <addaction name="actionTime"/>
+    <addaction name="actionInsert_numbered_list"/>
+   </widget>
    <addaction name="menu_File"/>
-   <addaction name="menuEvent_s"/>
    <addaction name="menu_Edit"/>
+   <addaction name="menuEvent_s"/>
+   <addaction name="menuInsert"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -102,9 +112,8 @@
    <addaction name="action_Add"/>
    <addaction name="actionErase_and_renew"/>
    <addaction name="actionSave"/>
+   <addaction name="action_Print"/>
    <addaction name="separator"/>
-   <addaction name="actionInsert_numbered_list"/>
-   <addaction name="actionInsert_bulleted_list"/>
    <addaction name="separator"/>
    <addaction name="actionCut"/>
    <addaction name="actionCopy"/>
@@ -112,6 +121,23 @@
    <addaction name="actionBold"/>
    <addaction name="actionItalic"/>
    <addaction name="actionUnderline"/>
+  </widget>
+  <widget class="QToolBar" name="toolBar_2">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionUndo"/>
+   <addaction name="actionRedo"/>
+   <addaction name="actionInsert_bulleted_list"/>
+   <addaction name="actionInsert_numbered_list"/>
+   <addaction name="actionDate"/>
+   <addaction name="actionTime"/>
   </widget>
   <action name="actionE_xit">
    <property name="icon">
@@ -222,6 +248,51 @@
    </property>
    <property name="text">
     <string>Erase &amp;and renew</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/undo.png</normaloff>:/tlb/undo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/redo.png</normaloff>:/tlb/redo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Redo</string>
+   </property>
+  </action>
+  <action name="action_Print">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/printer.png</normaloff>:/tlb/printer.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Print</string>
+   </property>
+  </action>
+  <action name="actionDate">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/calendar.png</normaloff>:/tlb/calendar.png</iconset>
+   </property>
+   <property name="text">
+    <string>Date</string>
+   </property>
+  </action>
+  <action name="actionTime">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/tlb/time.png</normaloff>:/tlb/time.png</iconset>
+   </property>
+   <property name="text">
+    <string>Time</string>
    </property>
   </action>
  </widget>
