--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -145,7 +145,10 @@
      <normaloff>:/tlb/poweroff.png</normaloff>:/tlb/poweroff.png</iconset>
    </property>
    <property name="text">
-    <string>E&amp;xit</string>
+    <string>&amp;Quit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="action_Add">
@@ -167,6 +170,9 @@
    </property>
    <property name="text">
     <string>Insert numbered list</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+I, B</string>
    </property>
   </action>
   <action name="actionInsert_bulleted_list">
@@ -211,7 +217,10 @@
      <normaloff>:/tlb/diskette.png</normaloff>:/tlb/diskette.png</iconset>
    </property>
    <property name="text">
-    <string>Save</string>
+    <string>&amp;Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionCut">
@@ -258,6 +267,9 @@
    <property name="text">
     <string>Undo</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
   </action>
   <action name="actionRedo">
    <property name="icon">
@@ -267,6 +279,9 @@
    <property name="text">
     <string>Redo</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Y</string>
+   </property>
   </action>
   <action name="action_Print">
    <property name="icon">
@@ -275,6 +290,9 @@
    </property>
    <property name="text">
     <string>&amp;Print</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
    </property>
   </action>
   <action name="actionDate">
