--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -14,20 +14,16 @@
    <string>KDiary</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QCalendarWidget" name="calendarWidget">
-        <property name="maximumSize">
-         <size>
-          <width>400</width>
-          <height>250</height>
-         </size>
-        </property>
-       </widget>
+      <item row="0" column="1" rowspan="3">
+       <widget class="QTextEdit" name="txtDiary"/>
       </item>
       <item row="1" column="0">
+       <layout class="QVBoxLayout" name="testFrame"/>
+      </item>
+      <item row="2" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -40,8 +36,15 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="1" rowspan="2">
-       <widget class="QTextEdit" name="txtDiary"/>
+      <item row="0" column="0">
+       <widget class="QCalendarWidget" name="calendarWidget">
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>250</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
