--- a/ui/bckmain_ui.ui
+++ b/ui/bckmain_ui.ui
@@ -17,6 +17,12 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="1" rowspan="3">
+       <widget class="QTextEdit" name="txtDiary"/>
+      </item>
+      <item row="1" column="0">
+       <layout class="QVBoxLayout" name="testFrame"/>
+      </item>
       <item row="2" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
@@ -30,11 +36,15 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="1" rowspan="3">
-       <widget class="QTextEdit" name="txtDiary"/>
-      </item>
-      <item row="1" column="0">
-       <layout class="QVBoxLayout" name="testFrame"/>
+      <item row="0" column="0">
+       <widget class="QCalendarWidget" name="calendarWidget">
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>250</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
