Added Settings form

--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -81,6 +81,8 @@
     <addaction name="actionItalic"/>
     <addaction name="actionUnderline"/>
     <addaction name="actionStrikethrough"/>
+    <addaction name="separator"/>
+    <addaction name="actionPreferences"/>
    </widget>
    <widget class="QMenu" name="menuInsert">
     <property name="title">
@@ -370,6 +372,11 @@
    </property>
    <property name="text">
     <string>Backup to &amp;Google Drive</string>
+   </property>
+  </action>
+  <action name="actionPreferences">
+   <property name="text">
+    <string>Preferences</string>
    </property>
   </action>
  </widget>
