--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -33,7 +33,7 @@
        <item>
         <layout class="QGridLayout" name="gridLayout_2">
          <item row="1" column="1">
-          <widget class="QToolButton" name="toolButton">
+          <widget class="QToolButton" name="btnOpenFolder">
            <property name="text">
             <string>...</string>
            </property>
@@ -47,7 +47,7 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="txtPathToDiary"/>
          </item>
         </layout>
        </item>
@@ -109,14 +109,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="btnSave">
        <property name="text">
         <string>Save</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="btnClose">
        <property name="text">
         <string>Cancel</string>
        </property>
