--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -73,43 +73,28 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="3" column="1">
-          <widget class="QToolButton" name="btn_color_weekday_foreground">
-           <property name="text">
-            <string>...</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>Week-end diary background</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="1">
-          <widget class="QToolButton" name="btn_color_weekend_background">
-           <property name="text">
-            <string>...</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0" colspan="2">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Weekday diary background</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
+         <item row="6" column="1">
           <widget class="QLabel" name="label_6">
            <property name="text">
             <string>Week-end diary foreground</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="lbl_color_weekday_background">
+         <item row="7" column="2">
+          <widget class="QToolButton" name="btn_color_weekend_foreground">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QLabel" name="lbl_color_weekend_background">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="styleSheet">
             <string notr="true">background-color: rgb(0, 85, 0);</string>
            </property>
@@ -118,14 +103,50 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item row="3" column="1">
+          <widget class="QLabel" name="lbl_color_weekday_foreground">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(0, 85, 0);</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" colspan="2">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Weekday diary background</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="3">
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="1" column="2">
           <widget class="QToolButton" name="btn_color_weekday_background">
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
-         <item row="8" column="0">
+         <item row="8" column="1">
           <spacer name="verticalSpacer_3">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -138,8 +159,14 @@
            </property>
           </spacer>
          </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="lbl_color_weekday_foreground">
+         <item row="1" column="1">
+          <widget class="QLabel" name="lbl_color_weekday_background">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="styleSheet">
             <string notr="true">background-color: rgb(0, 85, 0);</string>
            </property>
@@ -148,39 +175,62 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
+         <item row="2" column="1">
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Weekday diary foreground</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="lbl_color_weekend_background">
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(0, 85, 0);</string>
-           </property>
+         <item row="4" column="1">
+          <widget class="QLabel" name="label_4">
            <property name="text">
-            <string/>
+            <string>Week-end diary background</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="0">
-          <widget class="QLabel" name="lbl_color_weekend_foreground">
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(0, 85, 0);</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item row="7" column="1">
-          <widget class="QToolButton" name="btn_color_weekend_foreground">
+         <item row="3" column="2">
+          <widget class="QToolButton" name="btn_color_weekday_foreground">
            <property name="text">
             <string>...</string>
            </property>
           </widget>
+         </item>
+         <item row="7" column="1">
+          <widget class="QLabel" name="lbl_color_weekend_foreground">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(0, 85, 0);</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="2">
+          <widget class="QToolButton" name="btn_color_weekend_background">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </item>
