--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -50,6 +50,13 @@
           <widget class="QLineEdit" name="txtPathToDiary"/>
          </item>
         </layout>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_journal_mode">
+         <property name="text">
+          <string>Allow journal mode (allows to select dates in the future)</string>
+         </property>
+        </widget>
        </item>
        <item>
         <spacer name="verticalSpacer">
@@ -314,8 +321,42 @@
        <string>Backup</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
+       <item row="5" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
+         <item>
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Backup interval reminder (in days) </string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="spin_backup_interval"/>
+         </item>
+        </layout>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="lbl_google_folder_id">
+         <property name="text">
+          <string>Google Drive Folder Id</string>
+         </property>
+        </widget>
+       </item>
        <item row="2" column="0">
         <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <spacer name="verticalSpacer_6">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
          <item>
           <widget class="QGroupBox" name="groupBox_2">
            <property name="title">
@@ -404,9 +445,6 @@
        <item row="4" column="0">
         <widget class="QLineEdit" name="txt_google_folder_id"/>
        </item>
-       <item row="5" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_5"/>
-       </item>
        <item row="6" column="0">
         <spacer name="verticalSpacer_4">
          <property name="orientation">
@@ -419,13 +457,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="lbl_google_folder_id">
-         <property name="text">
-          <string>Google Drive Folder Id</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
