--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -24,10 +24,11 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 171, 230);</string>
+       <string notr="true">background-color: rgb(255, 171, 230);
+border-color: rgb(255, 0, 0);</string>
       </property>
       <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
+       <enum>QFrame::Box</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
@@ -39,12 +40,16 @@
           <string notr="true">color: rgb(0, 0, 0);</string>
          </property>
          <property name="text">
-          <string>TextLabel</string>
+          <string>[]</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="btn_close_warning">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(121, 121, 121);
+color: rgb(255, 255, 255);</string>
+         </property>
          <property name="text">
           <string>...</string>
          </property>
