--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -77,7 +77,11 @@ color: rgb(255, 255, 255);</string>
        </spacer>
       </item>
       <item row="0" column="1" rowspan="3">
-       <widget class="QTextEdit" name="txtDiary"/>
+       <widget class="QTextEdit" name="txtDiary">
+        <property name="lineWidth">
+         <number>1</number>
+        </property>
+       </widget>
       </item>
       <item row="1" column="0">
        <layout class="QVBoxLayout" name="testFrame"/>
